working on iphone display issue

--- a/jguffey/pub/css/site.less
+++ b/jguffey/pub/css/site.less
@@ -76,7 +76,7 @@ html{
 				bottom: 0px;
 				right: -40px;
 				z-index: 0;
-				
+				-webkit-transform:translateZ(0);
 			}
 			#main{
 				clear: both;
